--- a/app/views/welcome/download.html.haml
+++ b/app/views/welcome/download.html.haml
@@ -4,7 +4,7 @@
 
 #scanbot-manual.left
   #scanbot-about
-    %h4= "What is this?"
+    %h4= "What is 'scanbot' ?"
     %p
       The 'scanbot' is a downloadable application that will detect, collect and then 
       transmit testpaper scans stored on your computer.  All you need to do is tell 
