Created links to how-to and download pages from other places on the site ..

--- a/app/views/welcome/download.html.haml
+++ b/app/views/welcome/download.html.haml
@@ -6,7 +6,7 @@
   #scanbot-about
     %h4= "What is 'scanbot' ?"
     %p
-      The 'scanbot' is a downloadable application that will detect, collect and then 
+      'Scanbot' is a downloadable application that will detect, collate and then 
       transmit testpaper scans stored on your computer.  All you need to do is tell 
       the scanbot which folder/directory the scans are in and it will do the rest 
   #scanbot-getting-it
@@ -22,5 +22,5 @@
   #scanbot-video
     %h4= "Video Tutorial"
     %p
-      To see how to use the 'scanbot', please see the video tutorial titled "How to scan". 
-      Its quite simple, really
+      To see how to use the 'scanbot', please see the video tutorial titled 
+      ! #{link_to 'send scans for grading', howtos_path}. Its quite simple, really
