--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -29,6 +29,11 @@ body {
   color: $gray ;
 } 
 
+p > a, div > a { 
+  text-decoration: none ;
+  color: #6ca7ab ;
+} 
+
 #viewport {
   width: 850px ;
   min-height: 100px ;
