--- a/app/views/welcome/how_it_works.html.haml
+++ b/app/views/welcome/how_it_works.html.haml
@@ -2,10 +2,12 @@
   .half-column.left
     .step
       = image_tag "1.png"
-      .right= "Teacher picks questions from our database to create a quiz"
+      .right
+        Teacher picks questions from our database to #{link_to 'create a quiz', howtos_path}
     .step
       = image_tag "2.png"
-      .right= "Downloads the one PDF with testpapers for all students"
+      .right
+        Downloads the one PDF with #{link_to 'testpapers', howtos_path} for all students
     .step
       = image_tag "3.png"
       .right= "Students complete the quiz and return testpapers to teacher"
@@ -15,7 +17,8 @@
       .right= "Teacher scans completed testpapers"
     .step
       = image_tag "5.png"
-      .right= "Scans are transmitted back to us using our scanning app" 
+      .right
+        Scans are #{link_to 'transmitted back', howtos_path} to us using our #{link_to 'scanning app', download_path}
     .step
       = image_tag "6.png"
       .right= "We judge the quality of responses. Marks are then calculated based on teacher's marking scheme"
