--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -25,7 +25,7 @@ body {
               "Lucida Sans Unicode",
               sans-serif;
   width : 1020px ;
-  background-color: darken($blue, 30%) ;
+  background-color: $gray ; 
   color: $gray ;
 } 
 
