fixed a couple of hyperlinks

--- a/app/views/welcome/about_us.html.haml
+++ b/app/views/welcome/about_us.html.haml
@@ -20,7 +20,7 @@
       one of our caring, human graders to exercise that one piece of crucial |
       human judgment which then makes the rest of the magic happen. |
       Check out |
-      = link_to "how it works", '#'
+      = link_to "how it works", '/how_it_works'
       to learn more, or better yet watch our |  
-      = link_to "video tutorial", '#'
+      = link_to "video tutorial", '/howtos'
       , sign up for free, and see the magic for yourself! | 
