- content and style changes for about_us

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -663,8 +663,9 @@ span.unhappyMessage {
 
 #about-us {
 
+  margin-top: -20px ;
+
   > #question {
-    min-height: 80px ;
     width: 100% ;
     font-size: 14px ;
     color: #6ca7ab ;
