--- a/app/views/welcome/about_us.html.haml
+++ b/app/views/welcome/about_us.html.haml
@@ -1,26 +1,30 @@
 #about-us
   #question
+    who are we and what do we do?
+    %p 
+      We are teaching assistants. We help teachers with the non-teaching |
+      aspects of their job, for example grading. |
+  #question
     why grading?
     %p 
-      Ask any teacher what the most boring aspect of their job is. The answer |
-      will be grading. So we came up with gradians.com. A friendly, accessible |
-      and easy to use service that takes the pain out of tests and homeworks for |
-      everyone. If you are a teacher, just focus on the teaching. We'll take |
+      Ask any teacher what the most boring part of their job is. The answer |
+      will invariably be grading. So we came up with gradians.com. A friendly, |
+      easy to use service that takes the pain out of tests and homeworks for |
+      everyone. If you are a teacher, focus on the teaching. We'll take |
       care of the grading! |
   #question
     why us?
     %p 
-      We are computer programmers with a soft spot for Science and Math. Our “job” |
-      is to bring about operational efficiency, especially to boring monotonous |
-      work. Because boring monotonous work is what computers do best.
+      We are computer programmers. It is our job to automate boring, repetitive |
+      tasks. Beyond that, we also happen have a soft spot for Math and Science. |
   #question
-    But computers grading... how can it work? 
+    but computers grading... how can it work? 
     %p
-      Computers don't actually grade. They just make it ridiculously simple for |
-      one of our caring, human graders to exercise that one piece of crucial |
-      human judgment which then makes the rest of the magic happen. |
+      Computers don't actually grade. They just make it very simple for one of our |
+      caring 'human graders' to exercise that one piece of crucial judgment which |
+      makes the entire process work quickly and efficiently. |
       Check out |
       = link_to "how it works", '/how_it_works'
       to learn more, or better yet watch our |  
       = link_to "video tutorial", '/howtos'
-      , sign up for free, and see the magic for yourself! | 
+      , sign up for free, and try it for yourself! | 
