--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -883,9 +883,10 @@ li {
 
 #past-quizzes-list a.btn {
   width: 60% ;
-  font-size: 11px ;
+  font-size: 13px ;
   color: white ; 
   background-color: #6ca7ab ;
-  border-radius: 5px ;
+  border-radius: 10px ;
   margin-bottom: 20px ;
+  text-align: center ;
 }
