--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -170,7 +170,10 @@ p > a, div > a {
 .swiss-knife { 
   min-height: 22px ;
   border-bottom: 1px solid #6ca7ab ; 
-  padding-top: 0px ;
+  padding: {
+    top: 2px ;
+    bottom: 1px ;
+  }
   color: white ;
   font-size: 13px ;
   font-weight: normal ;
