Default font-size changed to 9.5pt

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -24,7 +24,7 @@ body {
             "DejaVu Sans",
             "Lucida Sans Unicode",
             sans-serif;
-    size: 12px ;
+    size: 9.5pt ;
   }
   width : 1020px ;
   background-color: $gray ; 
