Ubuntu - when available - should be the default font in forms

--- a/app/assets/stylesheets/formtastic_changes.css
+++ b/app/assets/stylesheets/formtastic_changes.css
@@ -1,6 +1,6 @@
 
 form.formtastic { 
-  font-family : "Trebuchet MS", Helvetica, Arial, sans-serif;
+  font-family : Ubuntu, "Trebuchet MS", Helvetica, Arial, sans-serif;
 } 
 
 form.formtastic fieldset.inputs p.inline-hints {
