Left padding required in scroll-heading to correctly ..
.. show open/close triangle

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -848,6 +848,7 @@ li {
     padding: {
       top: 5px ;
       bottom: 5px ; 
+      left: 25px ;
     }
     color: white ;
     cursor: pointer ;
