Support for specifying country name w/ auto-complete feature added .. .
Needed to add a new plugin + create a new DB table to store country names.
New table loaded with data from ISO

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
   %head 
     %title= "Grades will happen ..."
     = stylesheet_link_tag "application" 
-    = javascript_include_tag "application"
+    = javascript_include_tag "application", "welcome"
     = csrf_meta_tag
   %body 
     #viewport
