--- a/app/views/welcome/download.html.haml
+++ b/app/views/welcome/download.html.haml
@@ -10,16 +10,16 @@
       transmit testpaper scans stored on your computer.  All you need to do is tell 
       the scanbot which folder/directory the scans are in and it will do the rest 
   #scanbot-getting-it
-    .half-column
+    .half-column.left
       %h4= "STEP 1"
       = link_to 'Click to download', '#'
-    .half-column
+    .half-column.right
       %h4= "STEP 2"
       %p
         Your browser will pop-up a message asking you to confirm whether or not you want
         to download this application. This is expected and is - in fact - desirable behaviour.
         And for the scanbot, you can safely click on 'OK' or 'Accept'
-  #scanbot-video
+  #scanbot-video.left
     %h4= "Video Tutorial"
     %p
       To see how to use the 'scanbot', please see the video tutorial titled 
