--- a/app/views/welcome/try_us.html.haml
+++ b/app/views/welcome/try_us.html.haml
@@ -1,1 +1,20 @@
 #try-us
+  .two-third-column.left
+  .one-third-column.right
+    = semantic_form_for :trial, :remote => true, :method => :put do |f|
+      #trial-user-signup
+        %div
+          = f.input :name, :as => :string, :label => false, 
+                    :input_html => { :placeholder => 'full name' }
+          = f.input :email, :as => :string, :label => false, 
+                    :input_html => { :placeholder => 'email' }
+          = f.input :email_confirm, :as => :string, :label => false, 
+                    :input_html => { :placeholder => 're-enter email' }
+        %div
+          = f.input :school, :as => :string, :label => false, 
+                    :input_html => { :placeholder => 'school' }
+          = f.input :zip, :as => :string, :label => false, 
+                    :input_html => { :placeholder => "school's zip-code" }
+        %div
+          = f.input :country, :as => :select, :collection => Country.all, :label => false
+          = submit_tag 'sign-up for trial', :id => 'signup-btn', :class => 'orange-submit-btn'
