--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -31,6 +31,14 @@ body {
   color: $gray ;
 } 
 
+input::-webkit-input-placeholder {
+  color: #6ca7ab ;
+  font : {
+    family: Ubuntu, "Trebuchet MS", "Lucida Grande", sans-serif; 
+    size: 13px ;
+  }
+}
+
 p > a, div > a { 
   text-decoration: none ;
   color: #6ca7ab ;
@@ -699,12 +707,18 @@ span.unhappyMessage {
 
 .one-third-column {
   width: 32% ;
-  margin-right: 4% ;
+  margin: {
+    right: 4% ;
+    bottom: 20px ;
+  }
 }
 
 .two-third-column {
   width: 63% ;
-  margin-right: 5% ;
+  margin: {
+    right: 4% ;
+    bottom: 20px ;
+  }
 }
 
 #how-it-works {
@@ -940,17 +954,17 @@ li {
 
   > .step { 
     width: 100% ;
-    min-height: 60px ;
-    margin-bottom: 7px ;
+    min-height: 70px ;
+    margin-bottom: 10px ;
 
     .text {
-      font-size: 14px ;
+      font-size: 13px ;
       color: white ; 
       margin: {
         top: 5px ;
         left: 8px ;
       }
-      max-width: 80% ;
+      max-width: 91% ;
     }
   }
 }
