--- a/app/views/trial_account/success.html.haml
+++ b/app/views/trial_account/success.html.haml
@@ -1,2 +1,13 @@
-%h1 TrialAccount#create
-%p Find me in app/views/trial_account/create.html.haml
+#trial-registration-success
+  .one-third-column.left
+    #thumbs-up
+      = image_tag "thumbsUp.png"
+  .two-third-column.left
+    %h2= "Thank you for registering!"
+    %p
+      A trial account has been created for you
+    %p
+      You can login using the e-mail address you provided. Your password 
+      is the same as your school's zip code
+    %p
+      For any assistance, please write to help@gradians.com
