--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
           = main_link :for => :how_it_works, :as => 'how it works', :href => how_it_works_path
           = main_link :for => :download, :as => 'download', :href => download_path
           = main_link :for => :about_us, :as => 'about us', :href => about_us_path
-          = main_link :for => :try_us, :as => 'try it!', :href => try_us_path
+          = main_link :for => :try_us, :as => 'free trial', :href => try_us_path
       #mainstage
         = yield
     = yield :footer
