[Try-us]: Links embedded within explanatory text

--- a/app/views/welcome/try_us.html.haml
+++ b/app/views/welcome/try_us.html.haml
@@ -11,17 +11,17 @@
       .ticker.left= "2"
       .text.left
         Login as a teacher and build quizzes & testpapers based on our sample
-        syllabus. During trial, you will have access to a subset of our question-bank
+        syllabus. During trial, you will have access to a subset of our question bank
     .step
       .ticker.left= "3"
       .text.left
-        Printout a testpaper and write answers on it as if you were a student.
-        Then scan the testpaper and send it to us for grading. Do this as many
-        times as you would like
+        Print a testpaper and write answers on it as if you were a student.
+        Then #{link_to 'scan the testpaper', download_path} and send it to us for grading. You 
+        can go through this cycle with us as many times as you want
     .step
       .ticker.left= "4"
       .text.left
-        Need help? Write to us at help@gradians.com. Our video tutorials are also
+        Need help? Write to us at help@gradians.com. Our #{link_to 'video tutorials', howtos_path} are also
         a good source of information on the website's basics
     
         
