<input> placeholders replaced with explicit <label> ..
on sign-up-for-trial page. Placeholders are an HTML 5 construct and do
not render well on old browsers

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -659,10 +659,23 @@ span.unhappyMessage {
   }
 }
 
-#try-us form input[type="submit"] {
-  margin-top: 10px ;
-  float: right ;
-  min-width: 50% ;
+#try-us { 
+  form {
+    input[type="submit"] {
+      margin-top: 10px ;
+      float: right ;
+      min-width: 50% ;
+    }
+    
+    li {
+      > label { 
+        width: 100% ;
+        font-size: 12px ;
+        margin-bottom: 3px ;
+        text-transform: lowercase ;
+      } 
+    }
+  }
 }
 
 .orange-submit-btn {
