--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -105,18 +105,14 @@ p > a, div > a {
     }
     
     font: {
-      size: 12px ;
+      size: 13px ;
       weight: normal ; 
-      style: italic ;
     }
     color: $light-gray ;
   
-    > img {
-  	  margin-left: 30px ;
-    }
-  
     #copyright-validity {
   	  float: left ;
+      margin-right: 10px ;
     } 
   }
 }
@@ -1003,3 +999,18 @@ li {
     }
   }
 }
+
+.browser-icon {
+  min-width: 100px ;
+  margin-top: -10px ;
+  > img { 
+    float: none ;
+  } 
+
+  > a { 
+    width: 100% ;
+    float: left ;
+    text-transform: lowercase ;
+  }
+
+} 
