Generalized CSS logic for styling .scroll-heading

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -884,7 +884,8 @@ li {
   }
 }
 
-#quizzes-summary, #topic-selection-list, #question-options {
+//#quizzes-summary, #topic-selection-list, #question-options {
+.as-accordion {
   .scroll-heading {
     border-bottom: 1px solid $my-blue ; 
     padding: {
