--- a/app/views/teachers/_assignquiz.html.haml
+++ b/app/views/teachers/_assignquiz.html.haml
@@ -11,7 +11,7 @@
       %a{ :href => '#assign-quiz-receipt' }= "summary"
 
   #past-quizzes
-    #past-quizzes-list
+    #past-quizzes-list.as-accordion
 
   #sektion-list
 
