--- a/app/views/toolbox/_swiss_knife.html.haml
+++ b/app/views/toolbox/_swiss_knife.html.haml
@@ -25,7 +25,7 @@
   .label.left= "#{label}"
   %div.micro-ticker.right
   %input.button.right{ :type => :button, :disabled => true }
-  %select.right.difficulty.select{ :name => "difficulty[#{marker}]", :disabled => true}
+  %select.right.difficulty.select{ :name => "difficulty[#{marker}]", :disabled => true, :type => :select}
     %option{ :value => 0 }= ""
     %option{ :value => 1 }= "introductory"
     %option{ :value => 2 }= "intermediate"
